[gd_scene load_steps=16 format=3 uid="uid://dbnr15unbfc8"]

[ext_resource type="Texture2D" uid="uid://f8cl0d3xobxe" path="res://assets/BG.png" id="1_7wc33"]
[ext_resource type="Script" path="res://level_select.gd" id="1_ked1b"]
[ext_resource type="Texture2D" uid="uid://7v1ppccp8pdd" path="res://assets/Window.png" id="2_ufr1g"]
[ext_resource type="Texture2D" uid="uid://drxboe2dutwo2" path="res://assets/Button.png" id="3_8avkd"]
[ext_resource type="PackedScene" uid="uid://c47im1mu5gjm4" path="res://grid_container.tscn" id="4_y3d77"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2vq8k"]
atlas = ExtResource("2_ufr1g")
region = Rect2(1057, 162, 926, 741)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmeoa"]
atlas = ExtResource("2_ufr1g")
region = Rect2(1336, 64, 328, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_swrs0"]
atlas = ExtResource("3_8avkd")
region = Rect2(197, 2716, 181, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hfeb"]
atlas = ExtResource("3_8avkd")
region = Rect2(606, 2716, 181, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3rwc"]
atlas = ExtResource("3_8avkd")
region = Rect2(401, 2716, 181, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaafm"]
atlas = ExtResource("3_8avkd")
region = Rect2(810, 2716, 181, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf2qb"]
atlas = ExtResource("3_8avkd")
region = Rect2(197, 2498, 181, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcc8f"]
atlas = ExtResource("3_8avkd")
region = Rect2(606, 2498, 181, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcxie"]
atlas = ExtResource("3_8avkd")
region = Rect2(401, 2498, 181, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5exm"]
atlas = ExtResource("3_8avkd")
region = Rect2(810, 2498, 181, 189)

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ked1b")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7wc33")
expand_mode = 1

[node name="LevelMenu" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -331.5
offset_top = -266.0
offset_right = 331.5
offset_bottom = 266.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_2vq8k")
expand_mode = 1

[node name="Title" type="TextureRect" parent="LevelMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -151.5
offset_top = 19.0
offset_right = 151.5
offset_bottom = 78.0
grow_horizontal = 2
texture = SubResource("AtlasTexture_fmeoa")
expand_mode = 1

[node name="BackButton" type="TextureButton" parent="LevelMenu"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -46.5
offset_right = 40.5
offset_bottom = 46.5
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_swrs0")
texture_pressed = SubResource("AtlasTexture_7hfeb")
texture_hover = SubResource("AtlasTexture_i3rwc")
texture_disabled = SubResource("AtlasTexture_iaafm")
ignore_texture_size = true
stretch_mode = 5

[node name="ClipControl" type="Control" parent="LevelMenu"]
clip_contents = true
custom_minimum_size = Vector2(548, 292)
layout_mode = 1
anchor_left = 0.077
anchor_top = 0.267
anchor_right = 0.903
anchor_bottom = 0.816
offset_left = -0.0510063
offset_top = -0.0440063
offset_right = 0.310974
offset_bottom = -0.11203

[node name="GridContainer" type="HBoxContainer" parent="LevelMenu/ClipControl"]
unique_name_in_owner = true
custom_minimum_size = Vector2(548, 292)
layout_mode = 0
offset_right = 1100.0
offset_bottom = 292.0

[node name="GridContainer" parent="LevelMenu/ClipControl/GridContainer" instance=ExtResource("4_y3d77")]
layout_mode = 2

[node name="GridContainer2" parent="LevelMenu/ClipControl/GridContainer" instance=ExtResource("4_y3d77")]
layout_mode = 2

[node name="GridContainer3" parent="LevelMenu/ClipControl/GridContainer" instance=ExtResource("4_y3d77")]
layout_mode = 2

[node name="NextButton" type="TextureButton" parent="LevelMenu"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -46.5
offset_right = 38.5
offset_bottom = 46.5
grow_horizontal = 0
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_lf2qb")
texture_pressed = SubResource("AtlasTexture_qcc8f")
texture_hover = SubResource("AtlasTexture_jcxie")
texture_disabled = SubResource("AtlasTexture_i5exm")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="LevelMenu/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="LevelMenu/NextButton" to="." method="_on_next_button_pressed"]
